# Call-Center-Intelligence-System

./: .env.example  .gitignore  .pre-commit-config.yaml  Makefile  README.md  app.py  pyproject.toml  requirements.txt
data/: README.md
data/samples/: README.md
docs/: architecture.md  evaluation_report.md  security.md
evaluations/: config.yaml
evaluations/ground_truth/: 1735404531.458927.json  1755884171.51632.json  2020-03-27-16-06-36_f033f220-7044-11ea-9b9b-02aa061a3087_ef17dc6c-7044-11ea-9d03-8552464849c2.json  2020-07-17-14-44-38_318178f6-bb02-4151-92f1-3504e6ea672d_v2fHukpizuEy7lNClCSe0cL2vrPVUOysvECl1bl-fgoF3WD300XOpEMQ.json  2020-09-04-19-42-41_59815fc1-4076-4ac7-9147-51fb24952661_v2MTbt7gUh9DpLX6I6Sbgzvi4_m0_HSOchfsjtrDSRr5v7tW5QRfRXYw.json  2020-09-09-19-31-48_a58a25b6-a437-46df-8e8b-b58cf07def25_v2V4vC1OYvJVHQyi33nmfncDhAfMFkdepUDpl9InLdLB9VsA9qVaHhrg.json  2020-09-15-20-23-12_a0229647-2133-4c2f-a2ae-9b2ef08cc709_v2JY5dK-1s1kzXDEDd-38IwHwk_KOgQrLG55DkRgIkC2lPBH_TeyILoA.json  2020-09-16-20-29-53_3200ea72-e632-4408-86c8-526f97ce7fd7_v2iV-MR8SaJrgrTy3a2CbqH44fyc9u7gY-kcUrfUp9jQVVAiz_YWUAhw.json  2020-09-16-22-45-45_b9ba2936-a168-47b8-90cc-49aa76656b78_v2jXtzAj9k1MaoIdbQxqZCRB1nwJ4HtoAGBQ3Ks8vzpDBLRB0x29k4IA.json  2020-10-01-18-30-44_8f3d226d-43a2-433a-82dd-30ffae1892a2_v2OCRJQMzCQolZg0rSy06aKyf-1ZTXHI5FFMT8Uw9X4v2IlFTEEkUn0Q.json  2020-10-07-17-14-18_dadecd8d-9422-4838-9ef2-c1b7ba1f739e_v2w3tVJAOtqFSW_OLFcSChRFjyTsMm4tAq8g4l0V9Lv5VWyq24sY3ldA.json  2020-10-09-19-46-24_000990c9-d628-4635-93b5-f166108861b1_v2BmQu6jq5EEmdLHuw2YTDPZ4fSRsLZLsph0mBegkEmoc4rzBfpgzeoQ.json  DMEMED_rmbpo02_20211213-111549_7724644973_4684100-all.json  DMEMED_rmbpo07_20211119-102628_2035453644_4841698-all.json  DMEMED_rmbpo09_20211222-164742_2513774809_4982287-all.json  DMEMED_rmbpo11_20211103-144415_3192961742_4686093-all.json  DMEMED_rmbpo11_20211119-111629_6149286164_4712234-all.json  DMEMED_rmbpo15_20211008-171330_2522894678_3888513-all.json  DMEMED_rmbpo17_20211115-103806_5802483597_4779168-all.json  DMEMED_rmbpo17_20211117-092509_8129456815_4826278-all.json  DMEMED_rmbpo18_20211115-094142_2299477922_4794809-all.json  DMEMED_rmbpo18_20211208-114705_2146242774_4930703-all.json  SCHEMA.md  recording-public_1084.json  recording-public_1150.json  recording-public_407.json  recording-public_548.json  recording-public_575.json  recording-public_633.json  recording-public_695.json  recording-public_853.json  recording-public_921.json  recording-public_987.json
scripts/: download_dataset.py
src/agents/: intake.py  qa_scoring.py  report.py  summarization.py  transcription.py
src/database/: connection.py  models.py
src/evaluation/: correlation.py  llm_judge.py  metrics.py  run_eval.py
src/graph/: edges.py  state.py  workflow.py
src/security/: audit.py  injection_detector.py  pii_redactor.py
src/services/: history.py  observability.py  pipeline.py
tests/: conftest.py
(+27 files in other folders)
