[project]
name = "call-center-intelligence"
version = "0.1.0"
description = "Production call center intelligence system with multi-agent LangGraph pipeline"
requires-python = ">=3.11"
dependencies = [
    "langgraph==0.4.1",
    "langchain==0.3.25",
    "langchain-openai==0.3.12",
    "langsmith==0.3.42",
    "openai==1.82.0",
    "gradio==5.29.0",
    "faster-whisper",
    "pydantic==2.11.3",
    "sqlalchemy==2.0.41",
    "sqlcipher3==0.5.4",
    "presidio-analyzer==2.2.362",
    "presidio-anonymizer==2.2.362",
    "python-dotenv==1.1.0",
    "reportlab==4.4.0",
    "jiwer==3.1.0",
    "rouge-score==0.1.2",
    "bert-score==0.3.13",
    "scipy==1.15.3",
    "scikit-learn==1.6.1",
    "python-magic==0.4.27",
    "huggingface-hub==0.32.2",
    "python-docx",
    "datasets",
    "soundfile",
]

[project.optional-dependencies]
dev = [
    "pytest==8.3.5",
    "pytest-asyncio==0.25.3",
    "ruff==0.11.8",
    "mypy==1.15.0",
    "detect-secrets==1.5.0",
    "pre-commit==4.2.0",
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "integration: marks tests requiring full pipeline (deselect with '-m not integration')",
    "security: marks security test suite",
]
