[project]
name = "call-center-intelligence"
version = "0.2.0"
description = "AI-powered call center intelligence system with multi-agent LangGraph pipeline"
requires-python = ">=3.11"
dependencies = [
    "langgraph==0.4.1",
    "langchain==0.3.25",
    "langchain-openai==0.3.12",
    "langsmith==0.3.42",
    "openai==1.82.0",
    "gradio==5.29.0",
    "faster-whisper==1.2.1",
    "pydantic==2.11.3",
    "sqlalchemy==2.0.41",
    "python-dotenv==1.1.0",
    "reportlab==4.4.0",
    "soundfile==0.13.1",
    "mutagen==1.47.0",
    "langchain-google-genai==2.1.4",
    "langchain-groq==0.3.2",
]

[project.optional-dependencies]
dev = [
    "pytest==8.3.5",
    "pytest-asyncio==0.25.3",
    "ruff==0.11.8",
    "mypy==1.15.0",
    "detect-secrets==1.5.0",
    "pre-commit==4.2.0",
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "integration: marks tests requiring full pipeline (deselect with '-m not integration')",
    "security: marks security test suite",
]
